--- a/test_leo/pages/home.html
+++ b/test_leo/pages/home.html
@@ -7,6 +7,8 @@
 
     <!-- Import Style -->
     <link rel="stylesheet" href="../styles/style.css" />
+    <!-- Fav Icon -->
+    <link rel="shortcut icon" href="/components/img/fav_icon.png" />
 
     <!-- Import Phosphor Icons -->
     <link
@@ -153,6 +155,59 @@
     <section class="section4">
       <h1>Seção 4 - Contato</h1>
     </section>
+
+    <footer>
+      <div class="top-content">
+        <input type="text" class="box-name" placeholder="Digite seu nome" />
+        <input type="email" class="box-email" placeholder="Digite seu email" />
+        <button class="box-register">CADASTRAR</button>
+      </div>
+      <section class="middle-content">
+        <div class="left-content">
+          <div class="atendimento">
+            <h3>Atendimento</h3>
+            08:00 às 18:00 - Segunda a Sexta;<br />
+            08:00 às 12:00 - Sábado;<br />
+            Fechado - Domingos e feriados;
+            <p>
+              Fale conosco via
+              <a href="https://wa.me/5586994793195" target="_blank">WhatsApp</a>
+              ou pelo email:
+              <a href="mailto:leoinformatica.tech@gmail.com"
+                >leoinformatica.tech@gmail.com</a
+              >
+            </p>
+          </div>
+          <div class="vendas">
+            <h3>Vendas Pessoa Jurídica</h3>
+            <p>
+              08:00 às 18:00 - Segunda a Sexta;<br />
+              08:00 às 12:00 - Sábado;<br />
+              Fechado - Domingos e feriados; <br />
+              Fale conosco via
+              <a href="https://wa.me/5586994793195" target="_blank">WhatsApp</a>
+              ou pelo email:
+              <a href="mailto:leoinformatica.tech@gmail.com"
+                >leoinformatica.tech@gmail.com</a
+              >
+            </p>
+          </div>
+          <address class="loja-fisica">
+            <h3>Loja Física</h3>
+            08:00 às 18:00 - Segunda a Sexta;<br />
+            08:00 às 12:00 - Sábado;<br />
+            Fechado - Domingos e feriados;
+            <p>
+              Av. São Sebastião, 1551 - Nossa Sra. de Fátima, Parnaíba - PI,
+              64202-020
+            </p>
+          </address>
+        </div>
+        <div class="right-content">
+          <!-- Adicione aqui o que quiser no lado direito -->
+        </div>
+      </section>
+    </footer>
   </body>
   <script src="/scripts/slider.js"></script>
 </html>
