Remove cadastro.html, update home.css, and add login-register page with styles and scripts

--- a/test_leo/pages/home.html
+++ b/test_leo/pages/home.html
@@ -6,7 +6,7 @@
     <title>Leo Informática</title>
 
     <!-- Import Style -->
-    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/home.css" />
     <!-- Fav Icon -->
     <link rel="shortcut icon" href="/components/img/fav_icon.png" />
 
