--- a/test_leo/pages/login-register.html
+++ b/test_leo/pages/login-register.html
@@ -21,9 +21,9 @@
       <div class="form-container register-container">
         <form action="#">
           <h1>Cadastre-se</h1>
-          <input type="text" placeholder="name" />
-          <input type="email" placeholder="email" />
-          <input type="password" placeholder="password" />
+          <input type="text" placeholder="Nome" />
+          <input type="email" placeholder="Email" />
+          <input type="password" placeholder="Senha" />
           <button>Cadastrar</button>
           <span>ou use sua conta</span>
           <div class="social-container">
@@ -37,8 +37,8 @@
       <div class="form-container login-container">
         <form action="#">
           <h1>Acesse sua conta</h1>
-          <input type="email" placeholder="email" />
-          <input type="password" placeholder="password" />
+          <input type="email" placeholder="Email" />
+          <input type="password" placeholder="Senha" />
           <div class="content">
             <div class="checkbox">
               <input type="checkbox" name="checkbox" id="checkbox" />
@@ -64,7 +64,7 @@
           <div class="overlay-panel overlay-left">
             <h1 class="title">
               Seja <br />
-              Bem-Vindo
+              Bem-Vindo !
             </h1>
             <p>Se você tiver uma conta, acesse aqui</p>
             <button class="ghost" id="login">
@@ -75,7 +75,7 @@
           <div class="overlay-panel overlay-right">
             <h1 class="title">
               Bem vindo <br />
-              de volta
+              de volta !
             </h1>
             <p>Se você não fez sua conta ainda, não perca tempo!</p>
             <button class="ghost" id="register">
