Add product highlights section with dynamic slider and styling updates

--- a/test_leo/pages/home.html
+++ b/test_leo/pages/home.html
@@ -61,7 +61,7 @@
     <!-- Sections Content -->
     <section class="FistContent">
       <div class="promocoes">
-        <h1>Ofertas em destaque</h1>
+        <h1>Garanta já o seu</h1>
         <div class="slider-wrapper">
           <div class="produtos-destaque" id="slides">
             <div class="produto">
@@ -152,17 +152,30 @@
       </div>
     </section>
 
-    <section class="section2">
-      <h1>Seção 2 - Produtos</h1>
+    <!-- Seção 2: Destaques -->
+    <section class="section-destaques">
+      <div class="destaques-navbar">
+        <span class="destaques-titulo">DESTAQUES</span>
+        <button class="destaques-ver-todos">VER TODOS &gt;</button>
+      </div>
+      <div style="position: relative;">
+        <div class="destaques-slider-container">
+          <button class="destaques-slider-arrow left" aria-label="Anterior">
+            <i class="ri-arrow-left-line"></i>
+          </button>
+          <div class="destaques-box">
+            <!-- Os cards dos produtos serão inseridos via JS -->
+          </div>
+          <button class="destaques-slider-arrow right" aria-label="Próximo">
+            <i class="ri-arrow-right-line"></i>
+          </button>
+        </div>
+      </div>
     </section>
 
-    <section class="section3">
-      <h1>Seção 3 - Promoções</h1>
-    </section>
-
-    <section class="section4">
-      <h1>Seção 4 - Contato</h1>
-    </section>
+    <!-- <section class="section3">
+      <h1>Sessão 3 - Contato</h1>
+    </section> -->
 
     <footer>
       <div class="top-content">
