--- a/test_leo/pages/home.html
+++ b/test_leo/pages/home.html
@@ -158,7 +158,7 @@
         <span class="destaques-titulo">DESTAQUES</span>
         <button class="destaques-ver-todos">VER TODOS &gt;</button>
       </div>
-      <div style="position: relative;">
+      <div style="position: relative">
         <div class="destaques-slider-container">
           <button class="destaques-slider-arrow left" aria-label="Anterior">
             <i class="ri-arrow-left-line"></i>
@@ -173,9 +173,8 @@
       </div>
     </section>
 
-    <!-- <section class="section3">
-      <h1>Sessão 3 - Contato</h1>
-    </section> -->
+    <!-- Sessão 3: Mais vendidos -->
+
 
     <footer>
       <div class="top-content">
