Implement dynamic promotions slider and update styling for product highlights

--- a/test_leo/pages/home.html
+++ b/test_leo/pages/home.html
@@ -62,9 +62,16 @@
     <section class="FistContent">
       <div class="promocoes">
         <h1>Garanta já o seu</h1>
-        <div class="slider-wrapper">
+        <div class="promocoes-slider-container">
+          <button class="promocoes-arrow left" aria-label="Anterior">
+            <i class="ri-arrow-left-line"></i>
+          </button>
           <div class="produtos-destaque" id="slides">
+            <!-- Produtos em promoção via JS -->
           </div>
+          <button class="promocoes-arrow right" aria-label="Próximo">
+            <i class="ri-arrow-right-line"></i>
+          </button>
         </div>
       </div>
     </section>
@@ -81,7 +88,6 @@
             <i class="ri-arrow-left-line"></i>
           </button>
           <div class="destaques-box">
-            <!-- Os cards dos produtos serão inseridos via JS -->
           </div>
           <button class="destaques-slider-arrow right" aria-label="Próximo">
             <i class="ri-arrow-right-line"></i>
