Add product details and update slider functionality for improved navigation

--- a/test_leo/pages/product.html
+++ b/test_leo/pages/product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>nome do produto</title>
-    
+
     <!-- Import Style -->
     <link rel="stylesheet" href="../styles/home.css" />
     <!-- Fav Icon -->
@@ -15,7 +15,50 @@
       rel="stylesheet"
     />
   </head>
+  <body>
+    <section class="product-content">
+      <div class="product-img">
+        <img src="" alt="" />
+      </div>
 
-  <body></body>
+      <div class="product-text">
+        <div class="name">
+          <h1>meu pau na tua mao</h1>
+        </div>
+        <div class="descript">
+          <span class="components-product">
+            vai ter a descrição daquela determinada parte
+          </span>
+        </div>
+      </div>
+
+      <div class="box-value">
+        <div class="value">
+          <h1>Preço do produto</h1>
+        </div>
+        <div class="payment">
+          <a href="#"> ver mais opções de pagamento e parcelamento </a>
+        </div>
+
+        <div class="buy">
+          <button class="buy-now">
+            <i class="ri-shopping-cart-2-fill"></i> Comprar agora
+          </button>
+          <button class="add-cart">
+            <i class="ri-shopping-cart-2-fill"></i> Adicionar ao carrinho
+          </button>
+        </div>
+
+        <div class="frete">
+            <h1>CONSULTE FRETE</h1>
+            <input type="text" class="frete-box" placeholder="Inserir CEP " />
+            <button class="button-frete">OK</button>
+            <div class="remenber-frete">
+                <a href="https://buscacepinter.correios.com.br/app/endereco/index.php">Não lembro meu cep</a>
+            </div>
+        </div>
+      </div>
+    </section>
+  </body>
   <script src="../scripts/product.js"></script>
 </html>
