feita a lista de itens acima do footer

--- a/test_leo/pages/home.html
+++ b/test_leo/pages/home.html
@@ -97,7 +97,10 @@
     </section>
 
     <!-- Sessão 3: Mais vendidos -->
-
+    
+    <div id="random-product-list" class="random-product-list"></div>
+    <div class="lista-produtos">
+    </div>
 
     <footer>
       <div class="top-content">
@@ -151,7 +154,8 @@
         </div>
       </section>
     </footer>
+    <script src="../scripts/random-products.js"></script>
+    <script src="../scripts/slider.js"></script>
+    <script src="../scripts/user-popup.js"></script>
   </body>
-  <script src="../scripts/slider.js"></script>
-  <script src="../scripts/user-popup.js"></script>
 </html>
