--- a/test_leo/pages/product.html
+++ b/test_leo/pages/product.html
@@ -38,7 +38,7 @@
           <h1 id="product-price">Preço do produto</h1>
         </div>
         <div class="payment">
-          <a href="#"> ver mais opções de pagamento e parcelamento </a>
+          <a href="#"><i class="ri-arrow-down-s-line"></i> ver mais opções de pagamento e parcelamento </a>
         </div>
 
         <div class="buy">
