--- a/test_leo/pages/home.html
+++ b/test_leo/pages/home.html
@@ -56,6 +56,10 @@
           </div>
         </div>
       </div>
+      <form class="barra-busca" action="#" method="get">
+        <input type="text" placeholder="Buscar..." name="q">
+        <button type="submit">🔍</button>
+      </form>
     </header>
 
     <!-- Sections Content -->
@@ -99,8 +103,7 @@
     <!-- Sessão 3: Mais vendidos -->
     
     <div id="random-product-list" class="random-product-list"></div>
-    <div class="lista-produtos">
-    </div>
+    <div class="lista-produtos"></div>
 
     <footer>
       <div class="top-content">
