--- a/test_leo/pages/home.html
+++ b/test_leo/pages/home.html
@@ -56,9 +56,10 @@
           </div>
         </div>
       </div>
+      
       <form class="barra-busca" action="#" method="get">
         <input type="text" placeholder="Buscar..." name="q">
-        <button type="submit">🔍</button>
+        <button type="submit">🔍︎</button>
       </form>
     </header>
 
